Styling, Starting work on Mortgage Calculator

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
-.AppContainer{
+.AppContainer {
   padding-top:2em;
+}
+
+.CalcContainer {
+  display: flex!important;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 600px) {
+  .CalcContainer {
+    flex-direction: column;
+  }
 }
